# HealthCareOCR

./: .gitignore  OCR_TRACKS_COMPARISON.md  PLAN_batch_parallel_processing.md  PLAN_build_verify_pipeline.md  PLAN_design_ui.md  PLAN_disintegrate_phi_llm.md  PLAN_document_and_compare_tracks.md  PLAN_fix_ocr_accuracy.md  PLAN_fix_ocr_none_type.md  PLAN_fix_raw_text_error.md  PLAN_fix_surya_compatibility.md  PLAN_fix_ui_playwright.md  PLAN_medical_ocr_pipeline.md  PLAN_optimize_accuracy_speed.md  PLAN_optimize_ocr_performance.md  PLAN_optimize_summarizer.md  PLAN_playwright_ocr_eval.md  PLAN_quantize_ocr_engines.md  PLAN_session_2_preprocessing.md  PLAN_session_3_super_resolution.md  PLAN_session_4_ocr_engine.md  PLAN_session_5_post_processing.md  PLAN_session_6_summarization.md  PLAN_session_7_fine_tuning.md  PLAN_session_8_benchmarking.md  PLAN_setup_github_push.md  README.md  REINTEGRATION_GUIDE.md  app.py  push_to_github.ps1  pyproject.toml  requirements.txt
configs/: pipeline_config.yaml
scripts/: benchmark.py  gpu_setup.ps1  ocr_diagnostics.py  playwright_ocr_eval.py  verify_env.py
src/: __init__.py  batch_runner.py  pipeline.py
src/ocr/: __init__.py  layout_engine.py  router.py  surya_engine.py  trocr_engine.py  vlm_engine.py
src/postprocessing/: confidence_scorer.py  llm_corrector.py  tokenizer.py
src/preprocessing/: __init__.py  enhancement.py  geometric.py  (+3 more)
tests/: test_fine_tuning.py  test_ocr.py  test_pipeline.py  test_postprocessing.py  test_preprocessing.py  test_preprocessing_sr.py  test_router_small_crop.py  test_super_resolution.py
(+6 files in other folders)
