[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-ocr"
version = "0.1.0"
description = "High-speed medical report OCR + summarization pipeline"
readme = "README.md"
authors = [{ name = "HealthCareOCR Team" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "transformers",
    "bitsandbytes",
    "accelerate",
    "huggingface_hub",
    "optimum",
    "surya-ocr",
    "onnxruntime-gpu",
    "opencv-python-headless",
    "scikit-image",
    "deskew",
    "pillow",
    "numpy",
    "scipy",
    "sentencepiece",
    "pymedtermino",
    "pyyaml",
    "pandas",
    "matplotlib",
    "tqdm",
    "einops",
    "colorama"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
